<resources>
    <string name="app_name">TernaQu</string>
    <string name="halo">Halo!</string>
    <string name="welcomeText">Selamat datang di</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </string>
    <string name="shorter_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_text_register">Buat akun untuk melanjutkan</string>
    <string name="nama">Nama</string>
    <string name="full_name">Nama lengkap</string>
    <string name="email">Email</string>
    <string name="your_email">Alamat email anda</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="privacy_policy">Dengan membuat akun anda setuju dengan persyaratan layanan kami</string>
    <string name="go_to_login">Sudah punya akun? <b>Login</b></string>
    <string name="forgot_password">Lupa password?</string>
    <string name="login_greeting">Selamat datang kembali!</string>
    <string name="login_greeting2">Login untuk melanjutkan</string>
    <string name="go_to_register">Belum punya akun? <b>Register</b></string>
    <string name="profile_icon">profile icon</string>
    <string name="dash_header">Halo, </string>
    <string name="invite_to_forum">Bergabung dengan \nForum Diskusi</string>
    <string name="join_now">Gabung sekarang</string>
    <string name="see_more">Lihat semua</string>
    <string name="resep_header">Resep pangan pilihan</string>
    <string name="resep_sub_header">Resep pangan pilihan para ahli</string>
    <string name="rekomendasi_header">Rekomendasi merek pangan</string>
    <string name="rekomendadi_sub_header">Merek pangan terjamin</string>
    <string name="konsul_header">Konsultasi ahli ternak</string>
    <string name="konsul_sub_header">Konsultasi dengan ahli ternak untuk \npembahasan yang lebih lanjut</string>
    <string name="konsul_now">Konsultasi sekarang</string>
    <string name="loading">Memuat...</string>
    <string name="add_answer">Tambah jawaban anda</string>
    <string name="jumlah_jawaban">2 jawaban</string>
    <string name="your_answer">Jawaban anda</string>
    <string name="dummy_topic">Resep sapi gemuk masseh</string>
    <string name="dummy_topic_sub">Oleh Suhardi, 9 jam yang lalu</string>
    <string name="arrow_back">Kembali</string>
    <string name="search_hint">Cari permasalahan anda</string>
    <string name="forum_header">Paling banyak dicari akhir-akhir ini</string>
    <string name="forum_sub_header">Pertanyaan paling banyak dicari</string>
    <string name="suhardi">Suhardi</string>
    <string name="your_question">Apa yang ingin anda tanyakan?</string>
    <string name="question_hint">Tulis pertanyaan anda</string>
    <string name="your_keluhan">Ceritakan keluhan anda</string>
    <string name="keluhan_hint">Tulis keluhan anda</string>
    <string name="add_question">Tambah Pertanyaan</string>
    <string name="lihat_selengkapnya">lihat selengkapnya</string>
    <string name="search_recipe">Cari resep pangan</string>
    <string name="search_product">Cari merek pangan pilihan</string>
    <string name="alat_dan_bahan">Alat dan bahan</string>
    <string name="steps">Cara membuat</string>
    <string name="label_detail">Detail Produk </string>
    <string name="label_benefit">Manfaat Produk</string>
    <string name="reply_hint">Tulis jawaban atau pendapat anda</string>
    <string name="send">Kirim</string>
    <string name="cancel">Batal</string>
    <string name="go_premium">Beralih ke premium</string>
    <string name="is_premium">Pengguna Premium</string>
    <string name="setting_label">Pengaturan profil</string>
    <string name="masukan_label">Masukan</string>
    <string name="logout">Logout</string>
    <string name="last_consul">Konsultasi terakhir</string>
    <string name="last_consul_sub">Konsultasi dengan ahli ternak terakhir anda</string>
    <string name="other_nutritionist">Ahli ternak lainnya</string>
    <string name="other_nutritionist_sub">Pilih ahli ternak untuk berkonsultasi</string>
    <string name="join_premium">Bergabung dengan premium</string>
    <string name="desc_premium">Dapatkan akses fitur Hubungi Ahli Nutrisi, berikan ternakmu pakan yang terbaik untuk pertumbuhan mereka!</string>
    <string name="desc_benefit_1">Chat Ahli Nutrisi</string>
    <string name="motivation">Siap untuk beternak?</string>
    <string name="app_quote">Tingkatkan produktifitas tanpa melupakan kualitas. Ternak, ya ternaQu!</string>
</resources>